# tick

./: .gitignore  CMakeLists.txt  README.md  fixIt.sh  peek.build.container.sh  peek.client.container.sh  peek.proto.container.sh  peek.server.container.sh  reloadNginx.sh  startNginx.sh  startTickClient.sh  startTickServer.sh  stopNginx.sh
nginx/conf/: nginx.conf  nginx.virtual.conf
tick-blk/.vagrant/machines/consul-server/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders
tick-blk/.vagrant/machines/lb/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key
tick-blk/.vagrant/machines/web1/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key
tick-blk/.vagrant/machines/web2/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  vagrant_cwd
tick-blk/.vagrant/machines/web3/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key
tick-blk/envoy.bak/: envoy.bak
tick-blk/vagrant-files/: Vagrantfile
tick-blk/vagrant-files/.vagrant/machines/consul-server/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  vagrant_cwd
tick-blk/vagrant-files/.vagrant/machines/lb/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key
tick-blk/vagrant-files/.vagrant/machines/server1/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key
tick-blk/vagrant-files/.vagrant/machines/server2/virtualbox/: action_provision  action_set_name  box_meta  id  index_uuid  private_key  synced_folders
tick-blk/vagrant-files/envoy/: Dockerfile.envoy.lb  buildEnvoyLb.sh  envoy.lb.yaml
tick-cegress/: Vagrantfile  consul.setup.sh  create.consul.agents.pl  direction.legacyservice.json  direction.service.json  direction.service.json.keep  envoy.setup.sh  legacy.envoy.cfg  register_external_node.sh  register_termination_gateway.sh  start.consul.server.agent.sh  start_directionclient.sh  start_directionserver.sh  start_proxy.sh  start_termination_gateway.sh  start_tick_client.sh  start_tick_server.sh  termination_gateway.hcl  tick.legacyservice.json  tick.service.json
tick-consul/: ReadMe  Vagrantfile  consul.setup.sh  create.consul.agents.pl  dns.lookup.sh  goto.sh  http.lookup.sh  install.consul-template.sh  lb.service.json  start.consul.server.agent.sh  web.service.json
tick-consul/nginx/conf/: nginx.virtual.conf
tick-consul/provision/: buildEnvoyDocker.sh  create.nginx-web.service.pl  envoy.yaml  haproxy.cfg  haproxy.ctmpl  setup.lb.sh  start.all.web.services.sh  stop.all.web.services.sh
tickClient/: CMakeLists.txt  Dockerfile.build  TickClientImpl.h  buildd.sh  main.cpp  run.sh  tick_client_version.h.in
tickDirectionClient/: CMakeLists.txt  Dockerfile.build  buildd.sh  buildl.sh  main.cpp  run.sh  tickDirectionClientImpl.h  tick_direction_client_version.h.in
tickDirectionServer/: CMakeLists.txt  Dockerfile.build  buildd.sh  main.cpp  run.sh  tick_direction_server_version.h.in
tickProto/: CMakeLists.txt  Dockerfile.build  buildd.sh  buildl.sh  tick.proto
tickServer/: CMakeLists.txt  Dockerfile.build  buildd.sh  main.cpp  run.sh
tickSetup/: Dockerfile.setup  Dockerfile.setup.from_scratch  buildd.sh
tickWeb/: Dockerfile  Dockerfile.envoy  ReadMe  buildJsClient.sh  client.js  envoy.yaml  index.html  package.json  reloadNginx.sh  startEnvoy.sh  startNginx.sh  stopNginx.sh
tickWeb/nginx/conf/: nginx.conf  nginx.mime.types  nginx.virtual.conf
